@@ -13,6 +13,8 @@ release 0.14.3
 	* fixed a replace_trackers bug
 	* fixed bug where the DHT port mapping would not be removed when
 	  changing DHT port
+	* fixed move_storage bug when files were renamed to be moved out
+	  of the root directory
 
 release 0.14.2
 
